2012-12-03  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, gpasm/lst.h, gpasm/directive.c:
    fixed listing of PAGE directive;
    error, warning, message spacing like in MPASM(X)
  * gpasm/parse.y, gpasm/gpasm.h.in: improved CBLOCK listing
  * gpasm/gpasm.c: initialize astack before the second pass

2012-12-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/list.c: added info about amount of free program memory to the
    listing
  * gpasm/macro.c, gpasm/gpasm.c: fixed warnings
  * gpasm/preprocess.c: fix for eof without newline

2012-12-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c: Minor correction of prog_mem_size.

2012-12-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c.
    libgputils/gpprocessor.h:
    New members in the struct proc_class: page_size, bank_size
    New member in the struct px: prog_mem_size

2012-11-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.mchip/asmfiles/while1.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/while2.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/while1.lst,
    gpasm/testsuite/gpasm.mchip/listfiles/while2.lst,
    gpasm/testsuite/gpasm.mchip/listfiles/while3.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/while1.hex,
    gpasm/testsuite/gpasm.mchip/hexfiles/while2.hex:
    fixed MPASM(X) "Warning[207]: Found label after column 1." which
    generates an error on gpasm
  * gpasm/gpasm.h.in, gpasm/preprocess.c, gpasm/parse.y,
    gpasm/gpasm.c, gpasm/util.c, gpasm/directive.c:
    implemented nested WHILE loops
  * gpasm/parse.y, gpasm/macro.c, gpasm/macro.h, gpasm/directive.c,
    gpasm/gpasm.h.in, gpasm/preprocess.c, gpasm/scan.l:
    WHILE listing compatible with MPASM(X)

2012-11-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: data sections listing fixes, ibank listing fix
  * gpasm/directive.c: global directive listing fix
  * gpasm/preprocess.c: